<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@drawable/wood_panel"
android:layout_height="match_parent"
    android:id="@+id/jobPostView"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutcontainsearchBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/historySearchBar"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/cardview_light_background"
                    android:textColor="@color/cardview_light_background"
                    android:textColorHint="@color/cardview_light_background"
                    android:ems="10"
                    android:hint="@string/search_here"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/historySearchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12sp"
                    android:layout_marginEnd="0dp"
                    android:fontFamily="serif"
                    android:text="@string/search"></Button>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/categoryBar"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/categoryBtn1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/delivery"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/categoryBtn2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/computer"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/categoryBtn3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/babysitting"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/categoryBtn4"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/cleaning"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/categoryBtn5"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/dog_walking"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/categoryBtnOther"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/other"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/layoutDisplaySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutdisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"></LinearLayout>

                <Button
                    android:id="@+id/historyBackToDBBtn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginBottom="100dp"
                    android:fontFamily="serif"
                    android:text="@string/back_to_main">
                    <!--                app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--                app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                app:layout_constraintStart_toStartOf="parent" />-->
                </Button>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>