<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jobPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_panel"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/employerNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
...
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPostingHeader" />

    <EditText
        android:id="@+id/jobDetailsText"
        android:layout_width="215dp"
        android:layout_height="173dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Job Description"
        android:inputType="textMultiLine"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryInputText" />

    <EditText
        android:id="@+id/salaryInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
...
        android:ems="10"
        android:hint="Hourly Salary in CAD"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobType" />

    <Button
        android:id="@+id/submitBtnJobPost"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobDetailsText" />

    <Button
        android:id="@+id/BackdashBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="serif"
        android:text="Cancel"
...
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobDetailsText" />

    <EditText
        android:id="@+id/jobTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/cardview_light_background"
        android:ems="10"
...
