...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_panel"
    android:id="@+id/popup">

    <LinearLayout
        android:id="@+id/popuplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/yes"
                    android:fontFamily="serif"/>
                <Button
                android:id="@+id/cancelmatchbutton"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:fontFamily="serif"/>
        </LinearLayout>
...
